improve docs and add dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ toS3BucketName=mogreps
 
 # other properties
 # --------------------------------------------
-logging.level.uk.co.informaticslab = DEBUG
+logging.level.uk.co.informaticslab = INFO
 logging.level.root = WARN
