--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ camel.springboot.main-run-controller=true
 # --------------------------------------------
 
 fromDirectoryPath=/data
-toS3BucketName=mogreps
+toS3ParentBucketName=mogreps
 
 # other properties
 # --------------------------------------------
