update everything and add testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # the name of Camel
-camel.springboot.name = molab-file-to-s3
+camel.springboot.name=molab-file-to-s3
 camel.springboot.main-run-controller=true
 
 # properties used in the Camel route and beans
 # --------------------------------------------
 
-fromDirectoryPath=/data
-toS3ParentBucketName=mogreps
+fromDirectoryPath=/Users/tom/Documents/test-data/netcdf
+toS3BucketName=mogreps
 
 # other properties
 # --------------------------------------------
-logging.level.uk.co.informaticslab = INFO
-logging.level.root = WARN
+logging.level.uk.co.informaticslab=INFO
+logging.level.root=WARN
