amend production filepath

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ camel.springboot.main-run-controller=true
 # properties used in the Camel route and beans
 # --------------------------------------------
 
-fromDirectoryPath=/Users/tom/Documents/test-data/netcdf
+fromDirectoryPath=/data
 toS3BucketName=mogreps
 
 # other properties
