--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ camel.springboot.main-run-controller=true
 # properties used in the Camel route and beans
 # --------------------------------------------
 
-fromDirectoryPath=/data
+fromDirectoryPath=/data/incoming
+errorDirectoryPath=/data/error
+errorFileExpireAfterMillis=864000000
 toS3BucketName=mogreps
 
 # other properties
